# sprout-app

./: CODE_OF_CONDUCT.md  Cargo.toml  DEVELOPER.md  DEVELOPMENT_GUIDE.md  ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  LICENCE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SECURITY_GUIDELINES.md  SproutCheatSheet.txt  StartingFileStructure.txt  TODO.md  demo_script.md  generated_bridge.dart  who_is_sprout_for.md
.github/workflows/: build-apk.yml  build.yml  ci.yml  deploy-github-pages.yml  main.yml  release.yml  security-scan.yml
bindings/: bridge.dart  flutter_rust_bridge_gen.dart
bridge/: bridge.dart
docs/: architecture.md  language_spec.md  packages.md  sync_protocol.md
flutter/: pubspec.yaml
flutter/android/: gradle.properties  gradlew  local.properties
flutter/android/app/: build.gradle  proguard-rules.pro
flutter/ios/: Podfile
flutter/ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements
flutter/lib/: generated_bridge.dart  main.dart
flutter/lib/models/: project.dart
flutter/lib/screens/: ai_screen.dart  editor_screen.dart  home_screen.dart  onboarding_screen.dart  preview_screen.dart  project_template_screen.dart  recovery_screen.dart  settings_screen.dart  share_screens.dart
flutter/lib/services/: ai_assistant.dart  ai_code_generator.dart  app_state.dart  audit_service.dart  biometric_service.dart  database.dart  debugger.dart  e2ee.dart  encryption_service.dart  enhanced_ai_assistant.dart  form_validator.dart  install_service.dart  key_manager.dart  language_server.dart  native_bridge.dart  navigation_engine.dart  (+13 more)
flutter/test/: integration_tests.dart
landing/: index.html  style.css
rust/sprout_compiler/: Cargo.toml
rust/sprout_compiler/src/: ast.rs  bridge_generated.rs  enhanced_parser.rs  generator.rs  language_server.rs  lib.rs  parser.rs  runtime.rs  security.rs
rust/sprout_compiler/tests/: integration_test.rs  parser_test.rs  test_parser_enhancements.rs
scripts/: build_apk.sh  build_apk_template.sh  setup_dev_env.sh  sign_apk.sh
web-dashboard/: index.html  package-lock.json  package.json
web-dashboard/src/: App.jsx  main.jsx
(+31 files in other folders)
