# rust/sprout_compiler/Cargo.toml
[package]
name = "sprout_compiler"
version = "0.1.0"
edition = "2021"
description = "Compiler for SproutScript: turn intent into runnable apps"
license = "MIT"

[lib]
name = "sprout_compiler"
crate-type = ["staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
wasm3 = "0.5"

[dependencies.flutter_rust_bridge]
version = "1.80"
features = ["dart-ffi"]