[package]
name = "sprout_compiler"
version = "0.1.0"
edition = "2021"
description = "Secure compiler for SproutScript: turn intent into runnable apps"
license = "MIT"
homepage = "https://github.com/TangoSplicer/sprout-app"
repository = "https://github.com/TangoSplicer/sprout-app"
keywords = ["compiler", "mobile", "security", "wasm"]
categories = ["compilers", "development-tools"]

[lib]
name = "sprout_compiler"
crate-type = ["staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
wasm3 = "0.5"
regex = "1.10"
lazy_static = "1.4"
sha2 = "0.10"
rand = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hmac = "0.12"
pbkdf2 = "0.12"
aes-gcm = "0.10"
base64 = "0.22"

[dependencies.flutter_rust_bridge]
version = "2.5.0"
features = ["chrono"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "compiler_bench" 
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

